# ProjectBuilding

./: CMakeLists.txt  README.md  compile1.sh  compile2.sh  compile_full.sh  compile_separate.sh  makefile  makefile_efficient1  makefile_efficient2  myProgram.cxx
MyProject/: myFunctions.h
src/: myFunctions.cxx
